--- a/scan-inventory/package.json
+++ b/scan-inventory/package.json
@@ -13,6 +13,7 @@
     "@angular/platform-browser-dynamic": "~20.0.0",
     "@angular/router": "~20.0.0",
     "@nativescript/angular": "^20.0.0",
+    "@nativescript/camera": "^7.0.0",
     "@nativescript/core": "~8.9.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
